style.css
/*
	CORE STYLE
*/

html{
	background: #000;
	color: #eee;
}
html,body{
	font-family: 'Roboto', sans-serif;
	font-weight: 400;
	font-size:1em;
  min-height: 100vh;
  margin: 0;
  padding-top: 1px;
  margin-top: -1px;
}
body {
  display: flex;
  flex-direction: column;
}
a {
  color: inherit;
  text-decoration: none; /* no underline */
}
p {
  font-size: 1.25em;
}
p a, blockquote a, ul a, ol a {
  color: rgb(112,146,190);
}
p a:hover, blockquote a:hover, ul a:hover, ol a:hover {
  font-weight: bold;
}
h1,h2,h3,h4,h5,h6{
	margin: 0;
}
h1{
	font-weight:100;
  font-size: 3em;
}
h2{
	font-weight:300;
  font-size: 2.5em;
}
h3{
  font-size: 2em;
}
hr {
  border: none;
  border-bottom: white solid 1px;
}
blockquote {
  position: relative;
}
blockquote::before, blockquote::after {
  content: '';
  display: block;
  position: absolute;
  background: #777;
}
blockquote::before {
  left: -1.5em;
  top: -0.5em;
  bottom: -0.5em;
  width: 4px;
}
blockquote::after {
  left: -1.5em;
  top: 100%;
  top: calc(100% + 0.5em);
  right: 0;
  height: 1px;
}

/*
	CLASS TOOLS
*/

.dim{
	opacity: 0.75;
}
.hidden{
	display: none !important;
}
.text-center {
  text-align: center;
}
.text-skinny {
  font-weight: 300;
}
.flex-row, .flex-col {
  display: flex;
  flex-wrap: wrap;
}
.flex-row {
  flex-direction: row;
}
.flex-col {
  flex-direction: column;
}
.show-small, .show-med {
  display: none;
}
.x-scroller {
  display: block;
  overflow-x: auto;
}
.x-scroller > div {
  width: fit-content;
}
.y-scroller {
  display: block;
  overflow-y: auto;
  overflow-y: overlay; /* TODO: replace with scrollbar-gutter when it's ready */
}
.y-scroller > div {
  height: fit-content;
}

/*
	MENU ITEMS
*/
.btn{
	display: inline-block;
  font-size: 1.25em;
	padding: 0.5em;
	margin: 0 0.5rem 0.5rem 0;
	cursor: pointer;
  border: white solid 1px;
  border-radius: 0.5em;
  background: none;
	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0);
	transition: box-shadow 250ms;
}
.btn:hover{
	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0.25);
}
.hero .btn{
  color: #fff;
  border-color: #fff;
	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0);
}
.hero .btn:hover{
	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0.25);
}
.spacer {
  display: inline-block;
  margin: 0 1em 0.4em 0.6em;
  border-left: 1px solid #fff;
  border-top: 1px
  solid #fff;
}

/*
  FORMS
*/
input:not(.btn), textarea {
  max-width: 100%;
  background: none;
  color: white;
  border: none;
  border-bottom: white solid 1px;
  margin-bottom: 16px;
  line-height: 1;
}
input::placeholder, textarea::placeholder {
  color: rgba(255, 255, 255, 0.75);
}
input:not(.btn):hover, textarea:hover {
  background: rgba(255, 255, 255, 0.1);
}
input:not(.btn):focus-visible, textarea:focus-visible {
  background: rgba(255, 255, 255, 0.25);
  outline: none;
  border-bottom: white solid 4px;
  margin-bottom: 13px;
}
input[type=color], input[type=file] {
  display: inline-block;
}
input[type=file] {
  max-width: 30em;
}
input[type=checkbox], input[type=radio] {
  height: 1em;
}

.hero input:not(.btn), .hero textarea {
  color: #fff;
  border-bottom-color: #fff;
}
.hero input::placeholder, .hero textarea::placeholder {
  color: rgba(255, 255, 255, 0.75);
}
.hero input:not(.btn):hover, .hero textarea:hover {
  background: rgba(255, 255, 255, 0.1);
}
.hero input:not(.btn):focus-visible, .hero textarea:focus-visible {
  background: rgba(255, 255, 255, 0.25);
  border-bottom-color: #fff;
}

/*
	COLOURS
*/

.c-grey-bg{
	background:#727b88;
}
.c-grey{
	color:#727b88;
}
.c-mild-bg{
	background:#7295cd;
}
.c-mild{
	color:#7295cd;
}
.c-blue-bg{
	background:rgb(0,162,232);
}
.c-blue{
	color:rgb(0,162,232);
}
.c-purple-bg{
	background:rgb(163,73,164);
}
.c-purple{
	color:rgb(163,73,164);
}
.c-octocat-bg{
	background: #6e5494;
}
.c-octocat{
	color: #6e5494;
}
.c-blurple-bg{
	background: #7289da;
}
.c-blurple{
	color: #7289da;
}
.c-gmail-bg{
	background: #ea4335;
}
.c-gmail{
	color: #ea4335;
}

/*
  CUSTOM SCROLLBAR
*/
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}
::-webkit-scrollbar-track {
  background: none;
}
::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.25);
}
::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.5);
}

/*
  CONTENT
*/
.main{
  display: flex;
  flex-direction: column;
	position: relative;
  width: calc(100vw - 1em);
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  max-width: 96em;
  align-self: center;
  background: rgb(15, 15, 15);
  margin: 1em 1em 0.8em 1em;
  border-radius: 1em;
  overflow: hidden;
}

nav {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background: rgb(112, 146, 190) linear-gradient(90deg, rgb(0, 68, 97), rgb(88, 38, 88));
  /* border-bottom: white solid 1px; */
}
nav > .nav-item {
  font-size: 1.25rem;
  padding: 0.75rem;
  margin: 0.2rem;
}
nav > .nav-item:link {
  background: rgba(255, 255, 255, 0);
  border-radius: 0.8rem;
  transition: background 0.25s ease;
}
nav > .nav-item:link:hover {
  background:rgba(255, 255, 255, 0.25);
}
nav > .nav-item.active {
  font-weight: bold;
}

.pfp {
  border-radius: 1em;
  width: 12em;
  height: auto;
  margin-bottom: 1em;
}

article, section, aside {
  display: flex;
  flex-direction: column;
  padding: 1em;
}

.hero {
  color: #fff;
  background:rgb(112, 146, 190) linear-gradient(90deg, rgb(0, 68, 97), rgb(88, 38, 88));
  margin-bottom: -0.5em;
}

.login-status {
  position: relative;
}
.login-status a[href="edit/"] {
  position: absolute;
  top: 100%;
  right: 0;
  margin: 0.5em 0;
  font-size: 1.25rem;
}

.carousel {
  display: flex;
  flex-direction: row;
  border-radius: 0.9em;
}
.carousel > * {
  position: relative;
  display: flex;
  place-content: center;
  height: 20vh !important;
  min-height: 9em;
  max-height: 18em;
  max-width: 28em;
  background-size: cover;
  background-position: center;
  border-radius: 1em;
  overflow: hidden;
}
.carousel img {
  height: 100%;
  width: auto;
  scale: 1;
  opacity: 1;
  transition: scale 500ms, opacity 500ms;
}
.carousel > a:hover img {
  scale: 1.25;
  opacity: 0.75;
}
.carousel > *:not(:last-child) {
  margin-right: 1em;
}
.carousel.carousel-end-promo > div:last-child, .carousel.carousel-end-promo > a:last-child {
  display: block;
  max-width: unset;
  flex-grow: 1;
}
.carousel .info {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0.8em;
  padding: 0.8em;
  color: #fff;
  background: rgba(0,0,0,0.75);
	box-shadow: rgba(0,0,0,0.25) 0.25rem 0.25rem 0.5rem 0;
  border-radius: 0.8em;
  transition: color ease 0.25s, background ease 0.25s;
}
.carousel > a:hover > .info {
  color: #000;
  background: rgba(255, 255, 255, 0.75);
}

.credits {
  margin-bottom: 0.8em;
}

.post > .post-header {
  margin: -1em;
  margin-bottom: 1em;
  padding: 1em;
  border-bottom: white solid 1px;
}
.post > .post-header > img {
  width: calc(100% + 2em);
  height: auto;
  max-height: 40em;
  object-fit: cover;
  object-position: center;
  margin: -1em;
  margin-top: 1em;
  margin-bottom: -1.25em;
}
.post > .post-content img {
  max-width: 100%;
  height: auto;
}

/*
  MEDIA QUERIES
*/

@media screen and (max-width: 64em) {
  .main {
    margin: 1em 0.5em 0.8em 0.5em;
  }
  .hide-med {
    display: none;
  }
  .show-med {
    display: unset;
  }
}

@media screen and (max-width: 48em) {
  nav, .flex-row {
    justify-content: center;
  }
  .hide-small {
    display: none;
  }
  .show-small {
    display: unset;
  }
}

@media (prefers-color-scheme: light) {
  html {
    background: #ddd;
    color: #000;
  }
  .main {
    background: #fff;
  }
  nav {
    color: #fff;
  }
  hr {
    border-bottom-color: #000;
  }
  .post > .post-header {
    border-bottom-color: #000;
  }
  
  .btn{
    border-color: #000;
    box-shadow: inset 0 0 0 1.1em rgba(0,0,0,0);
  }
  .btn:hover{
    box-shadow: inset 0 0 0 1.1em rgba(0,0,0,0.25);
  }
}

